.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Unreleased

Bug Fixes:

  * util-logging: Fix incorrect `loggerName` in `c.t.logging.ScribeHandler` which
    prevented the short-circuiting of publishing messages emitted from the ScribeHandler.
    ``PHAB_ID=D161552``

  * util-hashing: Add murmur3, a fast, non-cryptographic hashing function that
    is missing from hashing.
    ``PHAB_ID=D164915``

18.4.0  2018-04-10

New Features:

  * util-app: Add the ability to bind specific implementations for `LoadService.apply`
    via `App.loadServiceBindings`. ``PHAB_ID=D146554``

  * util-core: Introduce the `ClosableOnce` trait which extends the guarantees of
    `Closable` to include idempotency of the `close` method. ``PHAB_ID=D152000``

Runtime Behavior Changes:

  * util-app: Add visibility for NonFatal exceptions during exiting of `c.t.app.App`.
    Added visibility into any NonFatal exceptions which occur during the closing of
    resources during `App#close`. ``PHAB_ID=D146029``

  * util-core: Ensure the `Awaitable.CloseAwaitably0.closeAwaitably` Future returns.
    Because the `closed` AtomicBoolean is flipped, we want to make sure that executing
    the passed in `f` function satisfies the `onClose` Promise even the cases of thrown
    exceptions. ``PHAB_ID=D146565``

  * util-stats: Alphabetically sort stats printed to the given `PrintStream` in the
    `c.t.finagle.stats.InMemoryStatsReceiver#print(PrintStream)` function.

    To include stats headers which provide better visual separation for the different
    types of stats being printedm, set `includeHeaders` to true. E.g.,
    ```
    InMemoryStatsReceiver#print(PrintStream, includeHeaders = true)
    ```
    ``PHAB_ID=D144091``

18.3.0  2018-03-05

Runtime Behavior Changes:
